<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="org.microdegree.com.app.exp.ui.bottomnav.Fragments.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />



    <fragment
        android:id="@+id/navigation_search"
        android:name="org.microdegree.com.app.exp.ui.bottomnav.Fragments.Search"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_courses"
        android:name="org.microdegree.com.app.exp.ui.bottomnav.Fragments.Course"
        android:label="@string/title_course"
        tools:layout="@layout/fragment_courses" />


    <fragment
        android:id="@+id/navigation_more"
        android:name="org.microdegree.com.app.exp.ui.bottomnav.Fragments.More"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
</navigation>